--- a/iOSTraining4.3/custom/custom/TableViewCell2.xib
+++ b/iOSTraining4.3/custom/custom/TableViewCell2.xib
@@ -7,26 +7,26 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="girl" id="KGk-i7-Jjw" customClass="TableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="boy" id="KGk-i7-Jjw" customClass="TableViewCell2">
             <rect key="frame" x="0.0" y="0.0" width="320" height="125"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="124.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cloud.png" translatesAutoresizingMaskIntoConstraints="NO" id="be8-nU-T7Y">
-                        <rect key="frame" x="103" y="0.0" width="217" height="124"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="redcloud.png" translatesAutoresizingMaskIntoConstraints="NO" id="O9a-uQ-3jG">
+                        <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                     </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="girl.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="iQc-eV-RPU">
-                        <rect key="frame" x="0.0" y="12" width="104" height="100.5"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="boy.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="NQI-PE-SQd">
+                        <rect key="frame" x="237" y="17" width="83" height="90.5"/>
                     </imageView>
                 </subviews>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="333" y="328.5"/>
+            <point key="canvasLocation" x="340" y="446.5"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="cloud.png" width="133" height="144"/>
-        <image name="girl.jpeg" width="180" height="180"/>
+        <image name="boy.jpeg" width="180" height="180"/>
+        <image name="redcloud.png" width="133" height="144"/>
     </resources>
 </document>
