--- a/iOSTraining4.3/custom/custom/TableViewCell.xib
+++ b/iOSTraining4.3/custom/custom/TableViewCell.xib
@@ -20,8 +20,17 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="girl.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="iQc-eV-RPU">
                         <rect key="frame" x="0.0" y="12" width="104" height="100.5"/>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="txW-XO-RRZ">
+                        <rect key="frame" x="173" y="37" width="42" height="33"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="girlLabel" destination="txW-XO-RRZ" id="18D-Yr-Htj"/>
+            </connections>
             <point key="canvasLocation" x="333" y="328.5"/>
         </tableViewCell>
     </objects>
