--- a/iOSTraining4.3/custom/custom/TableViewCell2.xib
+++ b/iOSTraining4.3/custom/custom/TableViewCell2.xib
@@ -14,12 +14,18 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="124.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="redcloud.png" translatesAutoresizingMaskIntoConstraints="NO" id="O9a-uQ-3jG">
-                        <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-                    </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="boy.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="NQI-PE-SQd">
                         <rect key="frame" x="237" y="17" width="83" height="90.5"/>
                     </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="redcloud.png" translatesAutoresizingMaskIntoConstraints="NO" id="O9a-uQ-3jG">
+                        <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HFH-ns-ZpG">
+                        <rect key="frame" x="99" y="52" width="42" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </tableViewCellContentView>
             <point key="canvasLocation" x="340" y="446.5"/>
