--- a/iOSTraining4.3/custom/BoyTableViewCell.xib
+++ b/iOSTraining4.3/custom/BoyTableViewCell.xib
@@ -7,20 +7,26 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="boy" id="KGk-i7-Jjw" customClass="TableViewCell2">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="boy" id="KGk-i7-Jjw" customClass="BoyTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="125"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="124.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="boy.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="NQI-PE-SQd">
-                        <rect key="frame" x="237" y="17" width="83" height="90.5"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="boy.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="XIy-3H-Yl8">
+                        <rect key="frame" x="239" y="18" width="81" height="90"/>
                     </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="redcloud.png" translatesAutoresizingMaskIntoConstraints="NO" id="O9a-uQ-3jG">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="llN-Bj-6t7">
+                        <rect key="frame" x="99" y="43" width="42" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="redcloud.png" translatesAutoresizingMaskIntoConstraints="NO" id="1bA-i2-6yW">
                         <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HFH-ns-ZpG">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bQL-Sc-v0X">
                         <rect key="frame" x="99" y="52" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -29,9 +35,9 @@
                 </subviews>
             </tableViewCellContentView>
             <connections>
-                <outlet property="boyLabel" destination="HFH-ns-ZpG" id="fej-eA-57E"/>
+                <outlet property="boyLabel" destination="llN-Bj-6t7" id="lp4-E3-neY"/>
             </connections>
-            <point key="canvasLocation" x="340" y="446.5"/>
+            <point key="canvasLocation" x="340" y="374.5"/>
         </tableViewCell>
     </objects>
     <resources>
